[gd_scene load_steps=16 format=3 uid="uid://b5uebk0looagt"]

[ext_resource type="Texture2D" uid="uid://b2aprbcdausug" path="res://characters/happy_boo/kip_staand.png" id="1_3c048"]
[ext_resource type="Script" path="res://menu.gd" id="1_f3bwm"]
[ext_resource type="Texture2D" uid="uid://cp5g4ana028qu" path="res://characters/happy_boo/koestaand.png" id="2_o4x1x"]
[ext_resource type="Texture2D" uid="uid://bkn4jfpa2byh4" path="res://background/Schermafbeelding 2024-06-07 134940.png" id="2_vry51"]

[sub_resource type="SystemFont" id="SystemFont_ln2hq"]
font_names = PackedStringArray("Elephant")
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bccpd"]
bg_color = Color(0.309804, 0.611765, 0.945098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8owjj"]
bg_color = Color(0.121569, 0.25098, 0.486275, 0.988235)
border_color = Color(0.309804, 0.611765, 0.945098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wnpvo"]
bg_color = Color(0.121569, 0.25098, 0.486275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_frlgp"]
bg_color = Color(0.309804, 0.611765, 0.945098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wr8b7"]
bg_color = Color(0.121569, 0.25098, 0.486275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4jly"]
bg_color = Color(0.121569, 0.25098, 0.486275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gbt1b"]
bg_color = Color(0.988235, 0.956863, 0.0117647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66vc6"]
bg_color = Color(0.988235, 0.615686, 0.0117647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqfqw"]
bg_color = Color(0.945098, 0.54902, 0.133333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ircpy"]
bg_color = Color(0.988235, 0.615686, 0.0117647, 1)

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_f3bwm")
metadata/_edit_use_anchors_ = true

[node name="Texture-Rect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -1.0
offset_right = 3.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vry51")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = SubResource("SystemFont_ln2hq")
theme_override_font_sizes/font_size = 150
text = "Farm-animal Fighters"

[node name="SelectContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="KipContainer" type="VBoxContainer" parent="VBoxContainer/SelectContainer"]
modulate = Color(0.952941, 0.972549, 0.996078, 1)
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 5.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/SelectContainer/KipContainer"]
layout_mode = 2
texture = ExtResource("1_3c048")

[node name="selectKip" type="Button" parent="VBoxContainer/SelectContainer/KipContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_bccpd")
theme_override_styles/hover = SubResource("StyleBoxFlat_8owjj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wnpvo")
text = "Select"

[node name="KoeContainer" type="VBoxContainer" parent="VBoxContainer/SelectContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
size_flags_stretch_ratio = 5.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/SelectContainer/KoeContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("2_o4x1x")

[node name="selectKoe" type="Button" parent="VBoxContainer/SelectContainer/KoeContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_frlgp")
theme_override_styles/hover = SubResource("StyleBoxFlat_wr8b7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q4jly")
text = "Select"

[node name="PlayContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 6
alignment = 1

[node name="playButton" type="Button" parent="VBoxContainer/PlayContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_gbt1b")
theme_override_styles/hover = SubResource("StyleBoxFlat_66vc6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nqfqw")
theme_override_styles/focus = SubResource("StyleBoxFlat_ircpy")
text = " Play "

[connection signal="pressed" from="VBoxContainer/SelectContainer/KipContainer/selectKip" to="." method="_on_select_kip_pressed"]
[connection signal="pressed" from="VBoxContainer/SelectContainer/KoeContainer/selectKoe" to="." method="_on_select_koe_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayContainer/playButton" to="." method="_on_play_button_pressed"]
